tests/compile-fail/generic_event_unused_parameter.rs
use sml::sml;

sml! {
    Unused<T> {
        *Idle + Start = X,
    }
}

fn main() {}
